; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/dec/tulip/extr_xircom_cb.c_xircom_close.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/dec/tulip/extr_xircom_cb.c_xircom_close.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }
%struct.xircom_private = type { %struct.TYPE_2__*, i64, i32 }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.net_device*)* @xircom_close to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @xircom_close(%struct.net_device* %0) #0 {
  %2 = alloca %struct.net_device*, align 8
  %3 = alloca %struct.xircom_private*, align 8
  %4 = alloca i64, align 8
  store %struct.net_device* %0, %struct.net_device** %2, align 8
  %5 = load %struct.net_device*, %struct.net_device** %2, align 8
  %6 = call %struct.xircom_private* @netdev_priv(%struct.net_device* %5)
  store %struct.xircom_private* %6, %struct.xircom_private** %3, align 8
  %7 = load %struct.net_device*, %struct.net_device** %2, align 8
  %8 = call i32 @netif_stop_queue(%struct.net_device* %7)
  %9 = load %struct.xircom_private*, %struct.xircom_private** %3, align 8
  %10 = getelementptr inbounds %struct.xircom_private, %struct.xircom_private* %9, i32 0, i32 2
  %11 = load i64, i64* %4, align 8
  %12 = call i32 @spin_lock_irqsave(i32* %10, i64 %11)
  %13 = load %struct.xircom_private*, %struct.xircom_private** %3, align 8
  %14 = call i32 @disable_all_interrupts(%struct.xircom_private* %13)
  %15 = load %struct.xircom_private*, %struct.xircom_private** %3, align 8
  %16 = call i32 @remove_descriptors(%struct.xircom_private* %15)
  %17 = load %struct.xircom_private*, %struct.xircom_private** %3, align 8
  %18 = getelementptr inbounds %struct.xircom_private, %struct.xircom_private* %17, i32 0, i32 2
  %19 = load i64, i64* %4, align 8
  %20 = call i32 @spin_unlock_irqrestore(i32* %18, i64 %19)
  %21 = load %struct.xircom_private*, %struct.xircom_private** %3, align 8
  %22 = getelementptr inbounds %struct.xircom_private, %struct.xircom_private* %21, i32 0, i32 1
  store i64 0, i64* %22, align 8
  %23 = load %struct.xircom_private*, %struct.xircom_private** %3, align 8
  %24 = getelementptr inbounds %struct.xircom_private, %struct.xircom_private* %23, i32 0, i32 0
  %25 = load %struct.TYPE_2__*, %struct.TYPE_2__** %24, align 8
  %26 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = load %struct.net_device*, %struct.net_device** %2, align 8
  %29 = call i32 @free_irq(i32 %27, %struct.net_device* %28)
  ret i32 0
}

declare dso_local %struct.xircom_private* @netdev_priv(%struct.net_device*) #1

declare dso_local i32 @netif_stop_queue(%struct.net_device*) #1

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @disable_all_interrupts(%struct.xircom_private*) #1

declare dso_local i32 @remove_descriptors(%struct.xircom_private*) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1

declare dso_local i32 @free_irq(i32, %struct.net_device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
